--- a/biente.html
+++ b/biente.html
@@ -4,8 +4,8 @@
 	<title>My first web page</title>
 </head>
 <body>
-	<p>This is my first web page</p>
-	<p>How exciting</p>
+	<h1>My first web page</h1>
+	<h2>What this is<h2>
 	<p>Yes, that really <em>is</em> exciting. <strong>Warning:</strong> level of excitement may cause head to explode.</p>
 </body>
 </html>
