--- a/biente.html
+++ b/biente.html
@@ -13,10 +13,43 @@
 
 <h1>My first web page</h1>
 
-<h2>What this is</h2>
-	<p>A simple page put together using HTML.</p>
+<style>
+h1 {
+    color: #fff;
+    background-color: #d00;
+    border-style: dashed;
+    border-width: 1px;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-color: #fff;
+	line-height: 50px
+}
+h2 {
+    color: #eee;
+    background-color: #d00;
+    border-style: solid;
+    border-width: 1px;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-color: #fff;
+	line-height: 30px
+}
+body {
+    font-size: 15px;
+    color: black;
+	font-family: arial, helvetica, sans-serif;
+    font-size: 15px;
+	background-color: #fee
+}
+p {
+    line-height: 20px;
+}
+</style>
 
-<h2>Why this is</h2>
+<h2> What this is</h2>
+<p>A simple page put together using HTML.</p>
+
+<h2> Why this is</h2>
 <ul>
     <li>To learn HTML</li>
     <li>
@@ -31,10 +64,11 @@
     <li>Because I have fallen in love with my computer and want to give her some HTML loving.</li>
 </ul>
 
-<h2>Where to find the tutorial</h2>
+<h2> Where to find the tutorial</h2>
 <p><a href="http://www.htmldog.com"><img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog"></a></p>
+<p><italic>HTML Dog logo<italic></p>
 
-<h3>Some random table</h3>
+<h3>A random table</h3>
 <table>
     <tr>
         <td>Row 1, cell 1</td>
@@ -58,18 +92,17 @@
     </tr>
 </table>
 
-<h3>Some random form</h3>
-<p><strong>Note:</strong> It looks the part, but won't do a damned thing.</p>
+<h3>A few questions for you</h3>
 
 <form action="somescript.php" method="post">
 
-<p>Name:</p>
-<p><input name="name" value="Your name"></p>
+<p><strong>Name:</strong></p>
+<input type="text" placeholder="Your name">
 
-<p>Comments: </p>
-<p><textarea rows="10" cols="20" name="comments">Your comments</textarea></p>
+<p><strong>Comments:</strong></p>
+<p><textarea rows="10" cols="20" type="text">Your comments</textarea></p>
 
-<p>Are you:</p>
+<p><strong>Are you:</strong></p>
 <p><input type="radio" name="areyou" value="male"> Male</p>
 <p><input type="radio" name="areyou" value="female"> Female</p>
 <p><input type="radio" name="areyou" value="hermaphrodite"> An hermaphrodite</p>
